--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -96,7 +96,7 @@
                                         }
                                         @if (session3 != null)
                                         {
-                                            @session3.Accounts
+                                            @session3.Name
                                         }
                                         else
                                         {
