--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DTCHM/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DTCHM/Index.cshtml
@@ -1,7 +1,10 @@
-﻿
+﻿@using PagedList;
+@using PagedList.Mvc
+@model PagedList.IPagedList<Models.EF.DotToChucHM>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var listDTCHM = (List<Models.EF.DotToChucHM>)ViewBag.listDTCHM;
 }
 
 <section class="breadcrumb_part breadcrumb_bg">
@@ -17,7 +20,141 @@
         </div>
     </div>
 </section>
-<section class="blog_area section_padding">
+
+@using (Html.BeginForm("Index", "DKDHM", FormMethod.Get))
+{
+    <section class="blog_area section_padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mb-5 mb-lg-0">
+                    <div class="blog_left_sidebar">
+                        @foreach (var item in listDTCHM)
+                        {
+                            <article class="blog_item">
+                                <div class="blog_item_img">
+                                    <img class="card-img rounded-0" src="~/Assets/client/img/blog/single_blog_10.png" alt="">
+                                    <a class="blog_item_date">
+                                        <p>Ngày tổ chức : @Html.DisplayFor(model => item.ngayToChuc)</p>
+                                    </a>
+                                </div>
+                                <div class="blog_details">
+                                    <table>
+                                        <tr>
+                                            <th>
+                                                <a href="@Url.Action("ChiTietDKHM","DTCHM") ">@item.tenDotHienMau</a>
+                                            </th>
+
+                                        </tr>
+                                        <tr>
+                                            <th>
+                                                <a>@item.noiDung</a>
+                                            </th>
+                                        </tr>
+                                        <tr>
+                                            <th>
+                                                <a>Đối tượng tham gia: @item.doiTuongThamGia</a>
+                                            </th>
+                                        </tr>
+                                        <tr>
+                                            <th>
+                                                <a>Địa chỉ: @item.diaChiToChuc</a>
+                                            </th>
+
+                                        </tr>
+                                    </table>
+                                    <table>
+                                        <tr>
+                                            <th>
+                                                <a>Thời gian đăng ký:</a>
+                                            </th>
+                                        </tr>
+                                        <tr>
+                                            <th>
+                                                <a>Từ ngày:  @Html.DisplayFor(model => item.ngayBatDauDK)</a>
+                                            </th>
+                                            <th>
+                                                <a>- Đến ngày: @Html.DisplayFor(model => item.ngayKetThucDK) </a>
+                                            </th>
+                                        </tr>
+                                    </table>
+
+                                    <ul class="blog-info-link" style="margin-top:10px">
+                                        @{
+                                            var session7 = (HiemMauNhanDao.Common.UserLogin)Session[HiemMauNhanDao.Common.CommonConstant.USER_SESSION];
+                                        }
+                                        @if (session7 == null)
+                                        {
+                                            <a class="genric-btn warning" href="@Url.Action("Index", "LoginClient") ">Hãy đăng nhập</a>
+                                        }
+                                        else
+                                        {
+                                            <a class="genric-btn info radius" href="@Url.Action("DKTC", "DkDHM")">Đăng ký</a>
+                                        }
+                                    </ul>
+                                </div>
+                            </article>
+
+                        }
+                    </div>
+                    <ul class="pagination">
+                        @Html.PagedListPager(Model, page => Url.Action("Index", new { page, @searchString = @ViewBag.SearchString, @class = "page-item" }))
+                    </ul>
+
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="blog_right_sidebar">
+                        <aside class="single_sidebar_widget search_widget">
+                            <form action="#">
+                                <div class="form-group">
+                                    <div class="input-group mb-3">
+                                        <input value="@ViewBag.SearchString" type="text" class="form-control" placeholder='Nhập nội dung'
+                                               onfocus="this.placeholder = ''"
+                                               onblur="this.placeholder = 'Nhập nội dung'">
+                                        <div class="input-group-append">
+                                            <button class="btn" type="button"><i class="ti-search"></i></button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <button class="button rounded-0 primary-bg text-white w-100 btn_1"
+                                        type="submit">
+                                    Tìm kiếm
+                                </button>
+                            </form>
+                        </aside>
+                        @RenderPage("_RightMenu.cshtml")
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+}
+
+
+@*<nav class="blog-pagination justify-content-center d-flex">
+        <ul class="pagination">
+            <li class="page-item">
+                <a href="#" class="page-link" aria-label="Previous">
+                    <i class="ti-angle-left"></i>
+                </a>
+            </li>
+            <li class="page-item">
+                <a href="#" class="page-link">1</a>
+            </li>
+            <li class="page-item active">
+                <a href="#" class="page-link">2</a>
+            </li>
+            <li class="page-item">
+                <a href="#" class="page-link" aria-label="Next">
+                    <i class="ti-angle-right"></i>
+                </a>
+            </li>
+        </ul>
+    </nav>*@
+
+@*<section class="blog_area section_padding">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mb-5 mb-lg-0">
@@ -25,12 +162,12 @@
                     <article class="blog_item">
                         <div class="blog_item_img">
                             <img class="card-img rounded-0" src="~/Assets/client/img/blog/single_blog_10.png" alt="">
-                            <a href="/DotHienMau/DangKyHiemMau" class="blog_item_date">
+                            <a href="@Url.Action("ChiTietDKHM","DTCHM") " class="blog_item_date">
                                 <h3>15/12/2021</h3>
                             </a>
                         </div>
                         <div class="blog_details">
-                            <a class="d-inline-block" href="/DotHienMau/ChiTietDKHM">
+                            <a class="d-inline-block" href="@Url.Action("ChiTietDKHM","DTCHM") ">
                                 <h2>Hiến máu nhân đạo lần thứ 10</h2>
                             </a>
                             <p>Nhằm hưởng ứng phong trào hiến máu tình nguyện trên địa bàn thành phố.</p>
@@ -40,11 +177,11 @@
                                 }
                                 @if (session4 == null)
                                 {
-                                    <a class="genric-btn warning" href="/LoginClient/Index">Hãy đăng nhập</a>
+                                    <a class="genric-btn warning" href="@Url.Action("Index","LoginClient") ">Hãy đăng nhập</a>
                                 }
                                 else
                                 {
-                                    <a class="genric-btn info radius" href="/DotHienMau/DangKyHiemMau">Đăng ký</a>
+                                    <a class="genric-btn info radius" href="@Url.Action("DangKyHiemMau","DTCHM") ">Đăng ký</a>
                                 }
                             </ul>
                         </div>
@@ -53,12 +190,12 @@
                     <article class="blog_item">
                         <div class="blog_item_img">
                             <img class="card-img rounded-0" src="~/Assets/client/img/blog/single_blog_10.png" alt="">
-                            <a href="/DotHienMau/DangKyHiemMau" class="blog_item_date">
+                            <a href="@Url.Action("DangKyHiemMau","DTCHM") " class="blog_item_date">
                                 <h3>15/12/2021</h3>
                             </a>
                         </div>
                         <div class="blog_details">
-                            <a class="d-inline-block" href="/DotHienMau/ChiTietDKHM">
+                            <a class="d-inline-block" href="@Url.Action("ChiTietDKHM","") ">
                                 <h2>Hiến máu nhân đạo lần thứ 10</h2>
                             </a>
                             <p>Nhằm hưởng ứng phong trào hiến máu tình nguyện trên địa bàn thành phố.</p>
@@ -68,11 +205,11 @@
                                 }
                                 @if (session5 == null)
                                 {
-                                    <a class="btn_2 d-none d-lg-block" href="/LoginClient/Index">Hãy đăng nhập</a>
+                                    <a class="btn_2 d-none d-lg-block" href="@Url.Action("Index","LoginClient")">Hãy đăng nhập</a>
                                 }
                                 else
                                 {
-                                    <a class="genric-btn info radius" href="/DotHienMau/DangKyHiemMau">Đăng ký</a>
+                                    <a class="genric-btn info radius" href="@Url.Action("DangKyHiemMau","DTCHM") ">Đăng ký</a>
                                 }
                             </ul>
                         </div>
@@ -319,7 +456,7 @@
 
 
 
-                    @*<aside class="single_sidebar_widget newsletter_widget">
+                    <aside class="single_sidebar_widget newsletter_widget">
                             <h4 class="widget_title">Newsletter</h4>
 
                             <form action="#">
@@ -332,11 +469,10 @@
                                     Subscribe
                                 </button>
                             </form>
-                        </aside>*@
+                        </aside>
                 </div>
             </div>
         </div>
 
     </div>
-</section>
-
+</section>*@
