--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/CreateNVYT.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/CreateNVYT.cshtml
@@ -1,4 +1,4 @@
-﻿@model Models.EF.TaiKhoan
+﻿@model Models.EF.ThongTinCaNhan
 @{
     ViewBag.Title = "CreateNVYT";
     Layout = "~/Views/Shared/_Layout.cshtml";
