--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DTCHM/ChiTietDKHM.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DTCHM/ChiTietDKHM.cshtml
@@ -53,7 +53,7 @@
                             Nội dung khác
                         </p>
                     </div>
-                    <a href="DotHienMauClient/DangKyHiemMau" class="genric-btn info radius">Đăng ký</a>
+                    <a href="  @Url.Action("DangKyHiemMau","DTCHM")/" class="genric-btn info radius">Đăng ký</a>
                 </div>
 
                 <div class="navigation-top">
