--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/EditTTCN.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/EditTTCN.cshtml
@@ -15,16 +15,9 @@
         <h4>ThongTinCaNhan</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.idTTCN)
+        @Html.HiddenFor(model => model.IdTTCN)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.idTK, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.idTK, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.idTK, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
+       
         <div class="form-group">
             @Html.LabelFor(model => model.hoTen, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
