--- a/HiemMauNhanDao/HiemMauNhanDao/Views/Shared/_Layout.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/Shared/_Layout.cshtml
@@ -53,26 +53,37 @@
                              id="navbarSupportedContent">
                             <ul class="navbar-nav align-items-center">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="/Home/Index#">Trang chủ</a>
+                                    <a class="nav-link" href="@Url.Action("Index","Home") ">Trang chủ</a>
                                 </li>
-                                <li class="nav-item">
+                                @*<li class="nav-item">
                                     <a class="nav-link" href="/DotHienMau/Index">Đợt hiến máu</a>
+                                </li>*@
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="@Url.Action("Index","DTCHM") " id="navbarDropdown_1"
+                                       role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Đợt hiến máu
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
+                                        <a class="dropdown-item" href="@Url.Action("Index","DTCHM") ">Tham gia</a>
+                                        <a class="dropdown-item" href="@Url.Action("Index","DkDHM")  ">Tổ chức</a>
+                                       
+                                    </div>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="donViLienKet.html">Đơn vị liên kết</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/NguoiDung/Index">Liên hệ</a>
-                                </li>                              
+                                    <a class="nav-link" href="@Url.Action("Index","NguoiDung") ">Liên hệ</a>
+                                </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="/DangKyTK/NguoiDung" id="navbarDropdown_1"
+                                    <a class="nav-link dropdown-toggle" href="@Url.Action("NguoiDung","DangKyTK") " id="navbarDropdown_1"
                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         Đăng ký
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
-                                        <a class="dropdown-item" href="/DangKyTK/NguoiDung">Đăng ký thành viên</a>
-                                        <a class="dropdown-item" href="/DangKyTK/DonVi">Đăng ký đối tác</a>
-                                        <a class="dropdown-item" href="/DangKyTK/BenhVien">Đăng ký bệnh viện</a>
+                                        <a class="dropdown-item" href="@Url.Action("NguoiDung","DangKyTK") ">Đăng ký thành viên</a>
+                                        @*<a class="dropdown-item" href="/DangKyTK/DonVi">Đăng ký đối tác</a>
+                <a class="dropdown-item" href="/DangKyTK/BenhVien">Đăng ký bệnh viện</a>*@
                                     </div>
                                 </li>
                             </ul>
@@ -83,7 +94,7 @@
                         }
                         @if (session5 == null)
                         {
-                            <a class="btn_2 d-none d-lg-block" href="/LoginClient/Index">Đăng Nhập</a>
+                            <a class="btn_2 d-none d-lg-block" href="@Url.Action("Index","LoginClient") ">Đăng Nhập</a>
                         }
                         else
                         {
@@ -91,10 +102,10 @@
                                 <li class="nav-item dropdown">
                                     <h5 class="nav-link dropdown-toggle" href="dangKy.html" id="navbarDropdown_1"
                                         role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Xin chào: @session5.Accounts
+                                        Xin chào: @session5.Name
                                     </h5>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
-                                        <h6 class="dropdown-item"> <a href="/NguoiDung/Index"> Cá nhân</a></h6>
+                                        <h6 class="dropdown-item"> <a href="@Url.Action("Index","NguoiDung") "> Cá nhân</a></h6>
                                         <h6 style="margin-left:20px"> @Html.ActionLink("Đăng xuất", "Logout", "LoginClient")</h6>
                                     </div>
                                 </li>
